--- a/py_LessonPractices_February.ipynb
+++ b/py_LessonPractices_February.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "py_LessonPractices_February.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyMf1xrJW1wkircnpZotBuvI",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,24 +16,13 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/krlslman/Python_Practices/blob/main/py_LessonPractices_February.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "9BqMYLKAZaVS",
-        "outputId": "aa84c8e4-81a8-49c0-d2f4-9bb5e3eeb473",
+        "outputId": "f8efb238-dbc0-487d-e4b3-a2172ef9a96b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 811
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
@@ -73,18 +60,9 @@
             "{'a', 'c'}\n",
             "removed a:  None\n",
             "added a:  None\n",
-            "10\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-6e1fa29c8b8c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;31m#------------------------------------------------------------\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0mnumbers_10\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m60\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m70\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m80\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m90\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 91\u001b[0;31m \u001b[0mnumbers_10\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumbers_10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
+            "10\n",
+            "[10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+            "['a', 'b', 'c', 'd', 'e', 'f']\n"
           ]
         }
       ],
@@ -179,7 +157,7 @@
         "\n",
         "#------------------------------------------------------------\n",
         "numbers_10 = [10, 30, 40, 50, 60, 70, 80, 90, 100]\n",
-        "numbers_10.insert[1,20]\n",
+        "numbers_10.insert(1,20)\n",
         "print(numbers_10)\n",
         "\n",
         "letters = ['a', 'b', 'c', 'd', 'f']\n",
