update after lambda lesson

--- a/py_LessonPractices_March.ipynb
+++ b/py_LessonPractices_March.ipynb
@@ -1364,7 +1364,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Defining a function using Arbitrary numbers"
+        "Defining a function using Arbitrary numbers"
       ],
       "metadata": {
         "id": "KKFd8Zdc6AqM"
@@ -1391,6 +1391,199 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class A:\n",
+        "\n",
+        "    global age\n",
+        "\n",
+        "    age = 15\n",
+        "\n",
+        "    def __init__(self, age):\n",
+        "\n",
+        "        self.age = age\n",
+        "\n",
+        "\n",
+        "\n",
+        "a = A(20)\n",
+        "\n",
+        "a.age = ?"
+      ],
+      "metadata": {
+        "id": "EDHy0oCFIRJN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def repeater(n):\n",
+        "    return lambda x: x * n\n",
+        "    \n",
+        "repeat_2_times = repeater(2)  # repeats 2 times\n",
+        "repeat_3_times = repeater(3)  # repeats 3 times\n",
+        "repeat_4_times = repeater(4)  # repeats 4 times\n",
+        "\n",
+        "print(repeat_2_times('I '))\n",
+        "print(repeat_3_times('can '))\n",
+        "print(repeat_4_times('DO '))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hJALsSRG3t13",
+        "outputId": "507751e0-4670-479b-87b9-43faca2f03b0"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "I I \n",
+            "can can can \n",
+            "DO DO DO DO \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def repeat_insideof_this(x,n):\n",
+        "    return x*n\n",
+        "def repeat_insideof_this_2(n):\n",
+        "    return (lambda x : x*n)\n",
+        "var1 = repeat_insideof_this_2(3)\n",
+        "print(var1(\"Koral\"))\n",
+        "print(repeat_insideof_this(\"Koral\",3))\n",
+        "  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3-J8VbDT5rlj",
+        "outputId": "470affed-d88b-4d2b-ff47-72208b0326b3"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "KoralKoralKoral\n",
+            "KoralKoralKoral\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_ = [1,2,3,4,5]\n",
+        "for i in list_:\n",
+        "\tprint((lambda x : \"odd\" if x%2!=0 else \"even\")(i), end=\" \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5Q-UJPSDW42P",
+        "outputId": "7bcfe134-8d2b-46c3-e99f-16ebfe254e25"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "odd even odd even odd "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_ = [1,2,3,4,5]\n",
+        "print(list(map((lambda x : \"even\" if x%2==0 else \"odd\"), list_)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bKzCP7f5W6kq",
+        "outputId": "926d7dd5-7de7-47ec-8e22-dd16aedae3b0"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['odd', 'even', 'odd', 'even', 'odd']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_ = [1,2,3,4,5]\n",
+        "print(list(map((lambda x : x*x), list_)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "14pe_S1lW8pu",
+        "outputId": "c0c078e4-455c-4130-8d25-88bb95d08510"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sınav_notları_öğrenci1 = [53,81,69]\n",
+        "sınav_notları_öğrenci2 = [10,52,90]\n",
+        "sınav_notları_öğrenci3 = [45,70,33]\n",
+        "sınıf_sınav_ortalamaları = list(map(lambda x,y,z : (x+y+z)/3, sınav_notları_öğrenci1, sınav_notları_öğrenci2, sınav_notları_öğrenci3))\n",
+        "sınıf_sınav_ortalamaları"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VrX-vcwJZmtB",
+        "outputId": "ac44b92d-07f0-43e1-f4b0-7be1ccdc9d02"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[36.0, 67.66666666666667, 64.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     }
   ]
 }
