--- a/py_LessonPractices_March.ipynb
+++ b/py_LessonPractices_March.ipynb
@@ -1168,10 +1168,111 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Define a function to take a word and return negative meaning.\n",
+        "Given a word, return a new word where \"not \" has been added to the front. However, if the word already begins with \"not\", return the string unchanged.\n"
+      ],
+      "metadata": {
+        "id": "HM_90sk_buY1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def not_string(word):\n",
+        "    list_ = list(word.split(\" \"))\n",
+        "    # print(list_)\n",
+        "    if list_[0] == \"not\":\n",
+        "        return(word)\n",
+        "        # return(str(word))\n",
+        "    else:\n",
+        "        return(\"not \"+str(word))\n",
+        "      \n",
+        "\t\n",
+        "print(not_string('sugar'))\n",
+        "print(not_string('x'))\n",
+        "print(not_string('not bad'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mbTrLfYWXM_s",
+        "outputId": "4769e22d-b51a-4a9a-fd5b-7c50e1e38d67"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "not sugar\n",
+            "not x\n",
+            "not bad\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##startswith() "
+      ],
+      "metadata": {
+        "id": "cs7_5lSacNia"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text = \"Python is easy to learn.\"\n",
+        "\n",
+        "result = text.startswith('is easy')\n",
+        "# returns False\n",
+        "print(result)\n",
+        "\n",
+        "result = text.startswith('Python is ')\n",
+        "# returns True\n",
+        "print(result)\n",
+        "\n",
+        "result = text.startswith('Python is easy to learn.')\n",
+        "# returns True\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "id": "0C4SL6nHcMu7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#all()"
       ],
       "metadata": {
         "id": "7FfUw5F6E5Iy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Check if all items in a list are True\n",
+        "mylist = [True, True, True]\n",
+        "x = all(mylist)"
+      ],
+      "metadata": {
+        "id": "GrCyA6Ikc9Gs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#some more practise"
+      ],
+      "metadata": {
+        "id": "rCfLhil-dBm9"
       }
     },
     {
@@ -1438,7 +1539,7 @@
         "id": "hJALsSRG3t13",
         "outputId": "507751e0-4670-479b-87b9-43faca2f03b0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1470,7 +1571,7 @@
         "id": "3-J8VbDT5rlj",
         "outputId": "470affed-d88b-4d2b-ff47-72208b0326b3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1496,7 +1597,7 @@
         "id": "5Q-UJPSDW42P",
         "outputId": "7bcfe134-8d2b-46c3-e99f-16ebfe254e25"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1520,7 +1621,7 @@
         "id": "bKzCP7f5W6kq",
         "outputId": "926d7dd5-7de7-47ec-8e22-dd16aedae3b0"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1544,7 +1645,7 @@
         "id": "14pe_S1lW8pu",
         "outputId": "c0c078e4-455c-4130-8d25-88bb95d08510"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1571,7 +1672,7 @@
         "id": "VrX-vcwJZmtB",
         "outputId": "ac44b92d-07f0-43e1-f4b0-7be1ccdc9d02"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1582,6 +1683,485 @@
           },
           "metadata": {},
           "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_ = [1,2,3,4,5,6,7,8,9]\n",
+        "x = filter(lambda x : x%2, list_)\n",
+        "print(*x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CKCZLxaWkQI4",
+        "outputId": "9852ff08-f7f2-476f-feb2-362c988b0ee1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 3 5 7 9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "words = [\"apple\", \"swim\", \"clock\", \"me\", \"kiwi\", \"banana\"]\n",
+        "x = filter(lambda x : len(x)<5, words)\n",
+        "print(*x, sep=\"\\n\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "djiHUiail-PX",
+        "outputId": "16692baa-7c77-4d44-f234-b356427e3934"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "swim\n",
+            "me\n",
+            "kiwi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assignment - 011/07 (Fizz - Buzz Numbers)**\n",
+        "\n",
+        "Task : Print the Fizz Buzz numbers.\n",
+        "\n",
+        "Fizz Buzz is a famous code challenge. It's time to write your own implementation.\n",
+        "Print numbers from 1 to 100 inclusively following these instructions:\n",
+        "if a number is multiple of 3, print \"Fizz\" instead of this number,\n",
+        "if a number is multiple of 5, print \"Buzz\" instead of this number,\n",
+        "for numbers that are multiples of both 3 and 5, print \"FizzBuzz\",\n",
+        "print the rest of the numbers unchanged.\n",
+        "Output each value on a separate line.\n",
+        "Note that : This question is famous on the web, so to get more benefit from this assignment, try to complete this task on your own."
+      ],
+      "metadata": {
+        "id": "bHT9EZkG5C_S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fizzNumbers():\n",
+        "  for i in range(1,101):\n",
+        "    if i%3==0 and i%5==0:\n",
+        "      print(i,\" : FizzBuzz\")\n",
+        "    elif i%3==0 and i%5!=0:\n",
+        "      print(i,\" : Fizz\")\n",
+        "    elif i%5==0 and i%3!=0:\n",
+        "      print(i,\" : Buzz\")\n",
+        "    else:\n",
+        "      print(i)\n",
+        "fizzNumbers()"
+      ],
+      "metadata": {
+        "id": "LqwTvXaZ5FU3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Task:\n",
+        "\n",
+        "Count the number of each letter in a sentence.\n",
+        "The department you work for undertook a project construction that makes word / text analysis. You are asked to calculate the number of letters in the sentences entered under this project.\n",
+        "\n",
+        "Write a Python program that;\n",
+        "*   takes a sentence from the user,\n",
+        "*   counts the number of each letter/chars of the sentence,\n",
+        "*   collects the letters/chars as a key and the counted numbers as a value in a dictionary.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XaBTADJsv1lB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import string\n",
+        "\n",
+        "letter_lib = {}\n",
+        "user_input = \"\"\"If you want to succeed something, you can succeed it with these two rules: \n",
+        "\t\t\t1) Want it so bad \n",
+        "\t\t\t2) Have a good plan\"\"\"  #input(\"Enter the text you want to analyze : )\n",
+        "alphabet = set(string.ascii_letters)\n",
+        "# alphabet.\n",
+        "for i in alphabet:\n",
+        "\ta = user_input.count(i)\n",
+        "\tif int(a) > 0:\n",
+        "\t\tletter_lib[i] = a\n",
+        "\n",
+        "for keys,value in letter_lib.items():\n",
+        "  print(\"-Letter\",keys,\"is repeated\",value, \"time(s)\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ElCxlDvmv0dG",
+        "outputId": "13c5ed39-2c90-4b82-81fa-8390900b2a3e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-Letter g is repeated 2 time(s)\n",
+            "-Letter w is repeated 3 time(s)\n",
+            "-Letter y is repeated 2 time(s)\n",
+            "-Letter p is repeated 1 time(s)\n",
+            "-Letter b is repeated 1 time(s)\n",
+            "-Letter h is repeated 3 time(s)\n",
+            "-Letter H is repeated 1 time(s)\n",
+            "-Letter W is repeated 1 time(s)\n",
+            "-Letter l is repeated 2 time(s)\n",
+            "-Letter a is repeated 7 time(s)\n",
+            "-Letter n is repeated 5 time(s)\n",
+            "-Letter m is repeated 1 time(s)\n",
+            "-Letter I is repeated 1 time(s)\n",
+            "-Letter u is repeated 5 time(s)\n",
+            "-Letter r is repeated 1 time(s)\n",
+            "-Letter i is repeated 4 time(s)\n",
+            "-Letter s is repeated 6 time(s)\n",
+            "-Letter e is repeated 9 time(s)\n",
+            "-Letter f is repeated 1 time(s)\n",
+            "-Letter o is repeated 8 time(s)\n",
+            "-Letter c is repeated 5 time(s)\n",
+            "-Letter d is repeated 4 time(s)\n",
+            "-Letter t is repeated 9 time(s)\n",
+            "-Letter v is repeated 1 time(s)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def repeater(n):\n",
+        "\t return lambda x: x*n\n",
+        "var = repeater(3)\n",
+        "var(\"koral\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "f9ykG-tiw4ot",
+        "outputId": "6f2e87f4-4fac-4c38-89c2-6f102561b3bb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'koralkoralkoral'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def emoji(n):\n",
+        "  return lambda x : x + n\n",
+        "\n",
+        "smile = emoji(\" :)\")\n",
+        "sad = emoji(\" :(\")\n",
+        "neutral = emoji(\" :|\")\n",
+        "\n",
+        "smile(\"clarusway\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "upCWc1vtw9Vz",
+        "outputId": "c3b05fb5-19b8-4588-859b-2f5158ea1666"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'clarusway :)'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def func(n):\n",
+        "  return lambda x : n(x)\n",
+        "\n",
+        "var1 = func(print)\n",
+        "var2 = func(max)\n",
+        "var3 = func(bool)\n",
+        "\n",
+        "var1(\"hello\")\n",
+        "var2([1,2,3,4])\n",
+        "var3(bool)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JT1r1rj04yeD",
+        "outputId": "f454dd51-2589-4c58-8ab3-2efa9659e6b1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def equal(a,b,c):\n",
+        "\tnum = [a,b,c]\n",
+        "\tif num.count(max(num, key = num.count)) == 1:\n",
+        "\t\treturn 0\n",
+        "\treturn num.count(max(num, key = num.count))\n",
+        "equal(1,3,1)\n",
+        "\t"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GYWo_iNY_JfI",
+        "outputId": "2a39089a-8dd7-4121-cae1-e7d1d98949aa"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equalambda = lambda x,y,z:[x,y,x].count(max([x,y,z],  key=[x,y,z].count))\n",
+        "equalambda(1,2,3)"
+      ],
+      "metadata": {
+        "id": "8iN4UZR-GFGM",
+        "outputId": "610b7c13-d07a-4e70-e0dc-b2c48151bd3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A number is said to be Harshad if it's exactly divisible by the sum of its digits. Create a function that determines whether a number is a Harshad or not."
+      ],
+      "metadata": {
+        "id": "TH26ySQrdJiY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_num = 171 # int(input(\"Enter a num to check whether its a HARSHAD num or not : \"))\n",
+        "\n",
+        "def is_harshad(x):\n",
+        "  toplam = 0\n",
+        "  for i in range(len(str(x))):\n",
+        "    toplam += int(str(x)[i])\n",
+        "  if not input_num % toplam :\n",
+        "    print(x,\"is a HARSHAD number\")\n",
+        "  else:\n",
+        "    print(x,\"is NOT a HARSHAD number\")\n",
+        "\n",
+        "is_harshad(input_num)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zXUvOI-FdOEB",
+        "outputId": "c55cd027-2a0c-41c6-d19e-7901821268c5"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "171 is a HARSHAD number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Elinizde bir teste ait cevap anahtarı ve öğrenci cevaplarının olduğu listeler var.\n",
+        "Siz bu cevapları anahtar ile kontrol ederek sonuçları doğru veya yanlış olarak çıktı almak istiyorsunuz.\n",
+        "\n",
+        "\n",
+        "Bunu yapacak kodları lambda ve map fonksiyonları ile nasıl yaparsınız.\n",
+        "\n",
+        "\n",
+        "Örnek: \n",
+        "\n",
+        "cevap_anahtarı=[“a”,“c”,“e”,“b”,“a”]\n",
+        "\n",
+        "ogrenci_1=[“a”,“d”,“d”,“b”,“a”]\n",
+        "\n",
+        "\n",
+        "İstenen çıktı Çıktı: [‘doğru’, ‘yanlıs’, ‘yanlıs’, ‘doğru’, ‘doğru’]"
+      ],
+      "metadata": {
+        "id": "LPiUHB8yhOqP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "ans_keys = [\"a\",\"c\",\"e\",\"b\",\"a\"] \n",
+        "stud_1 = [\"a\",\"d\",\"d\",\"b\",\"a\"]\n",
+        "func = (lambda x,y : 'RIGHT' if x==y else 'WRONG')\n",
+        "print(list(map(func, ans_keys,stud_1)))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "je0FkNd-hYhR",
+        "outputId": "59bc6eec-651f-42ac-d533-d17482e83538"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['RIGHT', 'WRONG', 'WRONG', 'RIGHT', 'RIGHT']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's construct a function with lambda that returns the arithmetic mean of a sequence of integers between two given numbers, including themselves."
+      ],
+      "metadata": {
+        "id": "TLrd4G0OnHFz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_num1 = 10 # int(input(\"Enter a num : \"))\n",
+        "input_num2 = 15 # int(input(\"Enter another num : \"))\n",
+        "\n",
+        "num_list = [*range(int(input_num1), int(input_num2)+1, 1)]\n",
+        "print(*num_list)\n",
+        "\n",
+        "# func = lambda x :\n",
+        "print(sum(num_list)/len(num_list))\n",
+        "result_ = lambda input_num1,input_num2 : sum(range(input_num1,input_num2+1)  / (input_num1-input_num2+1))\n",
+        "print(result_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rcXbqirYnVuU",
+        "outputId": "96104c81-07d7-4233-e946-29dba62c52e7"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 11 12 13 14 15\n",
+            "12.5\n",
+            "<function <lambda> at 0x7fa6076c5ef0>\n"
+          ]
         }
       ]
     }
