--- a/Qt Designer To IDE/readme.me
+++ b/Qt Designer To IDE/readme.me
@@ -3,3 +3,5 @@ Sample works:
 [Calculator](https://github.com/krlslman/Python_Assignments/blob/ed317e3fccf08814008118bb314cfbe75b8c0b75/220222_calc/calc_2%20Preview.gif)
 
 [id]: https://github.com/krlslman/Python_Assignments/blob/7f44df541fefa5f1958ba415e44d631dea2e15b8/220221_RockPaperScissors/rock_paper_scissors_Preview.gif/
+
+<a href="https://github.com/krlslman/Python_Assignments/blob/7f44df541fefa5f1958ba415e44d631dea2e15b8/220221_RockPaperScissors/rock_paper_scissors_Preview.gif/" target="_top">Download Page</a>
